# llm-robot-ros

./: .dockerignore  Dockerfile  GEMINI.md  MODIFICATIONS.md  README.md  init.sh  setup.py  start.sh  start_LLM.sh  start_test.sh
icclab_summit_xl/icclab_summit_xl/: CMakeLists.txt  package.xml
icclab_summit_xl/icclab_summit_xl/config/: ign_gazebo_bridge.yaml  nav2_params_real.yaml  nav2_params_sim.yaml  ur_controllers.yaml
icclab_summit_xl/icclab_summit_xl/launch/: bringup_launch.py  rviz.launch.py  servo_demo_full.launch.py  summit_xl_move_it.launch.py  summit_xl_nav2.launch.py  summit_xl_simulation_ign.launch.py
icclab_summit_xl/icclab_summit_xl/launch/real/: oak.camera.launch.py  summit_xl_real.launch.py
icclab_summit_xl/icclab_summit_xl/maps/tugbot_depot/: tugbot_depot.pgm  tugbot_depot.yaml  tugbot_depot_rtabmap.pgm  tugbot_depot_rtabmap.yaml
icclab_summit_xl/icclab_summit_xl/robots/: summit_xls_icclab.urdf.xacro
icclab_summit_xl/icclab_summit_xl/rviz/: navigation.rviz
icclab_summit_xl/icclab_summit_xl/scripts/: nav2_action_client.py  scan_frame_relay.py  servo_circle_demo.py  servo_debug_monitor.py  servo_joint_jog_control.py  servo_keyboard_control.py  setup_servo.py
icclab_summit_xl/icclab_summit_xl/src/: move_arm_to_pose.cpp  odom_tf_pub.cpp
icclab_summit_xl/icclab_summit_xl/urdf/arm/: ur.urdf.xacro
icclab_summit_xl/icclab_summit_xl/urdf/bases/: summit_xl_base.gazebo.xacro  summit_xl_hls_base.urdf.xacro
icclab_summit_xl/icclab_summit_xl/urdf/robotiq_gripper/: 2f_140.ros2_control.xacro
icclab_summit_xl/icclab_summit_xl/urdf/sensors/: hokuyo_utm30lx_no_frame_prefix.urdf.xacro  imu_hector_plugin.urdf.xacro  luxonis_camera_gazebo.urdf.xacro  luxonis_oak_d_pro.urdf.xacro  luxonis_oak_d_pro_model.urdf.xacro  orbbec_astra.urdf.xacro
icclab_summit_xl/icclab_summit_xl/worlds/: nephele_uc1.world
(+31 files in other folders)
